94-external-services-lab/app/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: restaurants-frontend
          image: jek2141/restaurants_frontend:v3
          ports:
          - containerPort: 8501
