94-external-services-lab/app/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment-service
spec:
  type: ClusterIP
  selector: 
    component: frontend
  ports: 
    - port: 8501
      targetPort: 8501
